calculate str, weak

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 .h-552 {
   height: 552px;
 }
+
+.left-45 {
+  left: 45%;
+}
+
+.h-fullscreen {
+  height: 712px;
+}
+
+.w-fullscreen {
+  width: 847px;
+}
+
+.h-640 {
+  height: 640px;
+}
+
+.Atma {
+  font-family: 'Atma', cursive;
+}
+
+.Gaegu {
+  font-family: 'Gaegu', cursive;
+}
